# safex

./: .env.example  .gitignore  .golangci.yml  Dockerfile  LICENCE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docs.yml
app/: .gitignore  Makefile  go.mod  go.sum
app/cmd/api/: main.go
app/internal/adapters/: blob_repository.go  blob_repository_test.go  opaque_auth_service.go  opaque_auth_service_test.go  secret_repository.go  secret_repository_test.go
app/internal/config/: config.go  config_test.go
app/internal/domain/: errors.go  repositories.go  secret.go  secret_test.go
app/internal/handlers/: forms.go  forms_test.go  helpers.go  helpers_test.go  http_handlers.go  http_handlers_test.go  mocks_test.go  opaque_handlers_test.go  secret_handlers.go  secret_handlers_test.go  validation.go  validators.go
app/internal/infrastructure/: server.go  server_test.go
app/internal/opaqueauth/: manager.go  manager_test.go  rust_bindings.h
app/internal/secret/: service.go  service_mock.go  service_test.go
app/internal/server/: rate_limiter.go  server.go  server_test.go  zerolog_middleware.go
app/internal/storage/: storage.go  storage_test.go
app/internal/usecases/: cleanup_expired_secrets.go  cleanup_expired_secrets_test.go  create_secret.go  create_secret_test.go  delete_secret.go  delete_secret_test.go  load_secret.go  load_secret_test.go  opaque_auth.go  opaque_auth_test.go
app/web/: web.go  web_test.go
app/web/templates/: createResult.gohtml  faq.gohtml  home.gohtml  retrieve.gohtml  revealResult.gohtml
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/scripts/: reveal_flow.mjs
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/pages/: architecture.md  backend.md  configuration.md  deployment_docker.md  deployment_local.md  frontend_wasm.md  index.md  opaque_protocol.md  rust_components.md  safex.md
frontend/: package-lock.json  package.json  tailwind.config.cjs
frontend/src/: input.css
rust/: Cargo.toml  Makefile
rust/src/: tests.rs  wasm.rs
rust/src/wasm/: tests.rs
wasm/: Cargo.toml  Makefile
wasm/src/: common.rs  lib.rs  server.rs  tests.rs  wasm.rs
web/: package-lock.json  package.json  tailwind.config.cjs
web/src/: input.css
(+46 files in other folders)
