[package]
name = "safex-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gonfff/safex"
license = "MIT"
description = "Client-side crypto utilities for Safex"
authors = ["gonfff"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = { version = "0.10", default-features = false, features = [
    "aes",
    "alloc",
] }
hex = "0.4"
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std"] }
wasm-bindgen = { version = "0.2", optional = true }
opaque-ke = { version = "3", default-features = false, features = [
    "std",
    "ristretto255-voprf",
    "argon2",
] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
hkdf = { version = "0.12", default-features = false, features = ["std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys"]
server = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
